# docs/swagger.yaml
@@ -108,8 +108,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/core.Response-movies_MoviesResponseType'
-      security:
-      - Bearer: []
       summary: get list of movies
       tags:
       - Movies
@@ -130,14 +128,7 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/core.Response-movies_MoviesResponseType'
-      security:
-      - Bearer: []
       summary: get list of movies based on search query
       tags:
       - Movies
-securityDefinitions:
-  Bearer:
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
